# mlir-hello

./: .gitignore  README.md  setup.sh
mlir-toy/: CMakeLists.txt
mlir-tutorial/: CMakeLists.txt
mlir-tutorial/ex1-io/: CMakeLists.txt
mlir-tutorial/ex2-build/: CMakeLists.txt  main.cpp
mlir-tutorial/ex3-dialect/include/toy/: ToyOps.h  ToyOps.td
mlir-tutorial/ex3-dialect/lib/: toy.cpp
mlir-tutorial/ex3-dialect/tools/toy-opt/: CMakeLists.txt
mlir-tutorial/ex5-pass/include/toy/: ToyOps.td  ToyPasses.h
mlir-tutorial/ex5-pass/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp
mlir-tutorial/ex5-pass/tools/toy-opt/: toy-opt.cpp
mlir-tutorial/ex6-pattern/include/toy/: CMakeLists.txt  ToyDialect.h  ToyOps.h  ToyOps.td  ToyPasses.td
mlir-tutorial/ex6-pattern/lib/: toy.cpp
mlir-tutorial/ex6-pattern/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp  DCE.cpp
mlir-tutorial/ex6-pattern/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
